# automation-core

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: audit.md  design.md  lineage-model.md  migration_plan.md  template_strategy.md
src/automation_core/: __init__.py  cli.py  config.py  logger.py
src/automation_core/healing/: __init__.py  audit.py  models.py  reporting.py  scoring.py
src/automation_core/helpers/: __init__.py  data.py  date_time.py  files.py  performance.py  retry.py  secrets.py  security.py  soft_assertions.py  structured_files.py  text.py  wait.py
src/automation_core/reporting/: __init__.py  adapters.py  allure_cli.py  allure_debug.py  analysis.py  design_system.py  events.py  finalizer.py  generator.py  history.py  insights.py  lineage.py  models.py  opener.py  platforms.py  portfolio.py  portfolio_render.py  product.py  quality.py  recorder.py  redaction.py  run_render.py  shell.py  sidecar.py  status.py  traversal.py  validation.py
tests/: test_config_logger.py  test_healing.py  test_helpers.py  test_reporting.py  test_reporting_design_system.py  test_reporting_enterprise_redesign.py  test_reporting_failure_semantics.py  test_reporting_finalizer.py  test_reporting_lineage.py  test_reporting_product.py  test_reporting_quality.py
